Fix reso to 800x600, implement camera wrap properly

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -30,8 +30,8 @@ button:hover {
 }
 
 #game-canvas {
-  width: 100%;
-  height: 100%;
+  width: 800px;
+  height: 600px;
 }
 
 #play-menu {
